# WebServerDemo

./: .gitignore
AuthDemo/api/: create_cert.sh  main.go  signin.sh  start.sh
AuthDemo/api/certs/: localhost.crt  localhost.key
AuthDemo/api/handlers/: auth.go  recipes.go
AuthDemo/cookies/: go.mod  go.sum  main.go  test.sh
AuthDemo/cookies/handlers/: auth.go
AuthDemo/users/: go.mod  main.go
FlaskDemo/: layout.py  main.py  start.sh
FlaskDemo/templates/: div_layout.html  iframe_embedded.html  iframe_main.html
TornadoDemo/: README.md
TornadoDemo/financial/: db.py
WebRTC/: cert.csr  go.mod  main.go
WebRTC/certs/: cert.pem  key.pem
WebRTC/cpp/: signalServer.js
WebRTC/cpp/gst-webrtc-sample/: CMakeLists.txt
WebRTC/cpp/gst-webrtc-sample/src/: gst-webrtc-main.cc  gst-webrtc-main.h  gst-webrtc-pipeline.cc  gst-webrtc-pipeline.h  gst-websocket-client.cc  main.cc
WebRTC/js/: dataChannel.js  nodeClient.js  signalServer.js  webrtcApp2.js  webrtcServer.js  webrtcapp.js
WebRTC/js/server/: webrtcServer.js
WebRTC/static/: constrain.html  index.html  localdatachan.html  localpeer.html  signaling.html  usermedia.html  webrtcapp.html  webrtcapp2.html
WebRTC/static/js/: getUserMedia.js  getUserMedia_constraints.js  localpeerConnection.js
